<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="amar.malek009@gmail.com">ammar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- Nav2 Dependencies -->
  <exec_depend>nav2_bringup</exec_depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  
  <!-- Other potential dependencies based on your launch file -->
  <depend>nav2_amcl</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
